v1.4.5
- Added Dress Girl Controller (Host Only) - You can control the dress girl and chase people!
- Added Clay Surgeon Controller - You can control the Clay Surgeon and cut people up!
- Added Cave Dweller Controller - You can control the Cave Dweller and jump on peoples!!
- Added Anti Ghost Girl - Ghost girl can't haunt you
- Added Welcome Message - Welcome message when you join a lobby
- Added Enemy Control Anti Scan - Prevents you from scanning when controlling a enemy
- Added Eggs Always Explode - Makes eggs always explode!
- Added No Ship Door Close (Host Only) - Makes the ship door stay closed when at 0%
- Added Force Meteor Shower (Host Only) - Forces a meteor shower 
- Added Clear Meteor Shower (Host Only) - Clears a meteor shower
- Added Double Wing Controller - Added controls and abilities for it 
- Added Docile Locust Bees Controller - Added controls for it but it has no abilities 
- Fixed Enemy Controller - Enemy control gets disabled when the enemy dies or gets destroyed
- Changed Unload - It attempts to remove all enabled hacks and make everything normal

v1.4.4 
- Added PJ Plushie Spammer - Spams PJ Plushies at a variable speed
- Added Click Teleport - Teleport to where you click
- Added Peer 2 Peer Communication - Adds [LethalMenu {version}] before their names in players tab (1.4.4+) 
- Added New Enemies To Cham Toggles 
- Added Grab Objects Before Game - You can pick up items
- Added Toggle All For Displays - Added a toggle to enable and disable all display options
- Added Toggle Terminal Sound - Spam the terminal sound
- Added FPS Counter - Displays your FPS
- Added Toggle Menu Tip - Adds a Toggle Menu: (Menu Key) to control tips
- Added Vehicle Godmode - Cruiser doesn't take damage
- Added Color Customization to info display
- Added Hack Highlight - Hacks are highlighted
- Added Hack Highlight Customization - Set the color of the highlighted hacks 
- Added Transmitt - You can send messages as the signal transmitter