@@ -82,6 +82,7 @@
 	"SelfTab.CloseAllBigDoors": "Close All Big Doors",
 	"SelfTab.ClickTeleport": "Click To Teleport",
 	"SelfTab.AntiGhostGirl": "Anti Ghost Girl",
+	"SelfTab.NoShipDoorClose": "No Ship Door Close",
 	"EnemyTab.Title": "Enemy",
 	"EnemyTab.EnemyList": "Enemy List",
 	"EnemyTab.EnemyTypes": "Enemy Types",
@@ -143,6 +144,8 @@
 	"PlayerTab.Inventory": "Inventory",
 	"PlayerTab.IsHost": "Host",
 	"PlayerTab.ForceBleed": "Force Bleed",
+	"PlayerTab.EnemySpawnNotifications": "Enemy Spawn Notifications",
+	"PlayerTab.EnemyDeathNotifications": "Enemy Death Notifications",
 	"ServerTab.Title": "Server",
 	"ServerTab.InfoDisplay": "Info Display",
 	"ServerTab.DisplayBodyCount": "Display Body Count",
@@ -206,6 +209,7 @@
 	"TrollTab.CarHorn": "Toggle Car Horn",
 	"TrollTab.DeleteTerminal": "Delete Terminal",
 	"TrollTab.PJSpammer": "PJ Plushie Spammer",
+	"TrollTab.TerminalSound": "Toggle Terminal Sound",
 	"VisualsTab.Title": "Visuals",
 	"VisualsTab.ESP": "ESP",
 	"VisualsTab.ToggleAll": "Toggle All",
